--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -5,11 +5,13 @@
         <!-- Customize your theme here. -->
         <item name="colorPrimary">?android:attr/colorPrimary</item>
         <item name="colorPrimaryDark">@color/colorAccent</item>
-        <item name="colorAccent">@color/colorAccent</item>
-        <item name="android:colorForeground">@color/foreground_material_light</item>
+        <item name="colorAccent">@android:color/white</item>
+        <item name="android:colorForeground">@android:color/white</item>
         <item name="android:navigationBarColor">@android:color/background_dark</item>
         <item name="android:statusBarColor">@android:color/background_dark</item>
         <item name="android:windowBackground">@drawable/background</item>
+        <item name="android:colorBackground">@android:color/background_dark</item>
+        <item name="android:textColorPrimary">@android:color/background_light</item>
     </style>
 
     <style name="AppTheme.NoActionBar" parent="Theme.AppCompat.NoActionBar">
